# FitMaster

./: .gitignore  README.md  example.py  pyproject.toml
.github/workflows/: linter.yml  pytest.yml
fitmaster/core/: curve_fitting_tool.py
fitmaster/criteria/: concrete.py  factory.py  interface.py
fitmaster/forms/: concrete.py  factory.py  interface.py
fitmaster/tests/: conftest.py  test_criteria.py  test_curve_fitting_tool.py  test_forms.py
